# academic_markdown

./: .gitignore  Dockerfile  README.md  academic_markdown.py  build.py
.devcontainer/: Dockerfile  devcontainer.json  pandoc-texliveonfly.py  requirements.txt
.github/workflows/: devcontainer-publish.yml  docker-image.yml  docker-publish.yml  python-app.yml
academic_markdown/: .gitignore  pyproject.toml
academic_markdown/src/: academic_markdown.py
academic_markdown/src/scripts/: check_health.sh  install_tectonic.sh
multiple/: 01_introduction.md  02_methodology.md  metadata.yaml
readme/: README.md
scripts/: build_docker.sh  check_health.sh  install_tectonic.sh
single/: small_report.md
src/: 01_introduction.md  03_conclusion.md  bibliography.bib  metadata.yaml
workflow/: 00_preface.md  01_introduction.md  02_general_overview.md  02_markdown.md  aa_references.md  bb_appendix.md  metadata.yaml
