[build-system]
requires = ["setuptools>=61.0", "typer[all]>=0.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic_markdown"
version = "0.0.1"
authors = [
  { name="Zohar Cochavi", email="cochavi.zohar@protonmail.com" },
]
description = "CLI for converting Markdown to Latex using pandoc and Docker."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
academic_markdown = "academic_markdown:app"

[project.urls]
"Homepage" = "https://github.com/cochaviz/academic_markdown"
"Bug Tracker" = "https://github.com/cochaviz/academic_markdown/issues"
